<resources>
    <string name="app_name">assignment1</string>
    <string name="hoursWorked">N of hours worked</string>
    <string name="hourlyRate">Hourly rate</string>
    <string name="taxRate">Tax rate</string>
    <string name="calculatePaystub">Calculate Paystub</string>
    <string name="pay">Pay: </string>
    <string name="overtimePay">Overtime Pay: </string>
    <string name="tax">Tax: </string>
    <string name="totalPay">Total Pay: </string>
    <string name="about">About</string>
    <string name="myName">Name: Breno Lopes Mafra</string>
    <string name="studentid">Student ID: 101485572</string>
</resources>